# medi-pro

./: .coveragerc  .flake8  .gitattributes  .gitignore  README.md  asgi.py  default_settings.py  fabfile.py  hosts.py  pyproject.toml  requirements.txt  test_settings.py  urls.py  wsgi.py
.github/workflows/: django.yml  old.django.yml
Admin/: urls.py  views.py
Admin/Admins/: filters.py  forms.py  tables.py  urls.py  views.py
Admin/Api/: urls.py
Admin/ClinicSettings/: urls.py
Admin/Handbooks/: urls.py
Admin/Home/: views.py
Admin/Loggers/: urls.py
Admin/Login/: forms.py  views.py
Admin/Medicine/: urls.py  views.py
Admin/Profile/: __init__.py  forms.py  urls.py  views.py
Admin/Users/: filters.py  tables.py  urls.py  views.py
Api/: filters.py  paginations.py  permissions.py  urls.py
Api/documentation/: auto_schema.py  patterns.py
Api/v1/: urls.py
Api/views/: base.py  mixins.py  views.py
WServer/: ws_server.py
celeryapp/: celery.py
configs/: settings_example.py
core/: context.py
core/ClinicPreSettings/: factories.py  models.py  services.py
core/Colors/: const.py  factories.py  models.py  services.py
core/Country/: const.py  factories.py  models.py  services.py
core/Currency/: const.py  factories.py  models.py  services.py
core/Employee/: factories.py  models.py
core/Loggers/: factories.py  models.py
core/Medicine/: enums.py  factories.py  models.py  redis.py  tasks.py
core/Redis/: base.py
core/Timezones/: factories.py  models.py  services.py
core/User/: admin.py  factories.py  models.py
medipro/: settings.py
(+286 files in other folders)
