[project]
name = "medi-pro"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "celery==5.5.3",
    "django==5.2.4",
    "django-extensions==4.1",
    "django-filter==25.1",
    "django-hosts==7.0.0",
    "django-redis==6.0.0",
    "django-tables2==2.7.5",
    "django-widget-tweaks==1.5.0",
    "djangorestframework==3.16.0",
    "drf-spectacular==0.28.0",
    "drf-spectacular-sidecar==2025.9.1",
    "fabric==3.2.2",
    "factory-boy==3.3.3",
    "flake8==7.3.0",
    "hashids>=1.3.1",
    "ipython==9.4.0",
    "jedi==0.19.2",
    "psycopg2==2.9.10",
    "requests>=2.32.5",
]
